--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "About Me"
+title                    : "My homepage"
 title_separator          : "-"
 name                     : &name "Iris Wan"
 description              : &description "Technical Writer"
